syntax = "proto3";
package nicholasdotsol.duality.dex;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dex/params.proto";
import "dex/ticks.proto";
import "dex/share.proto";
// this line is used by starport scaffolding # 1
import "dex/pool.proto";

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/NicholasDotSol/duality/dex/params";
  }
  // Queries a Ticks by index.
	rpc Ticks(QueryGetTicksRequest) returns (QueryGetTicksResponse) {
		option (google.api.http).get = "/NicholasDotSol/duality/dex/ticks/{token0}/{token1}";
	}

	// Queries a list of Ticks items.
	rpc TicksAll(QueryAllTicksRequest) returns (QueryAllTicksResponse) {
		option (google.api.http).get = "/NicholasDotSol/duality/dex/ticks";
	}

// Queries a Share by index.
	rpc Share(QueryGetShareRequest) returns (QueryGetShareResponse) {
		option (google.api.http).get = "/NicholasDotSol/duality/dex/share/{owner}/{token0}/{token1}/{price}/{fee}";
	}

	// Queries a list of Share items.
	rpc ShareAll(QueryAllShareRequest) returns (QueryAllShareResponse) {
		option (google.api.http).get = "/NicholasDotSol/duality/dex/share";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetTicksRequest {
	  string token0 = 1;
  string token1 = 2;

}

message QueryGetTicksResponse {
	Ticks ticks = 1 [(gogoproto.nullable) = false];
}

message QueryAllTicksRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTicksResponse {
	repeated Ticks ticks = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetShareRequest {
	  string owner = 1;
  string token0 = 2;
  string token1 = 3;
  string price = 4;
  string fee = 5;

}

message QueryGetShareResponse {
	Share share = 1 [(gogoproto.nullable) = false];
}

message QueryAllShareRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllShareResponse {
	repeated Share share = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
