syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";

message VirtualPriceTickQueue {
  uint64 id = 1;
  string price = 2; 
  string fee = 3; 
  string orderType = 4; 
  
}
